NOJIRA fjerne selftestrammeverk (#1158)
* NOJIRA fjerne selftestrammeverk

* NOJIRA glemte noargs for å komme opp